Corrected watchface background (white<->black)

--- a/appinfo.json
+++ b/appinfo.json
@@ -1,10 +1,10 @@
 {
   "uuid": "4145256f-4776-4a0c-a172-31b7a1d82195",
   "shortName": "Modern Timer",
-  "longName": "Modern Timer",
+  "longName": "Modern Timer with Flip Screen",
   "companyName": "Doug Conran",
   "versionCode": 1,
-  "versionLabel": "1.0",
+  "versionLabel": "1.1",
   "capabilities": [
 	"configurable"
   ],
